--- a/Konzole.html
+++ b/Konzole.html
@@ -19,7 +19,7 @@
 
     <div class="menu_bar">
       <header>
-        <a href="Index.html" class="logo">Gaming store</a>
+        <a href="Index.html" class="logo">GamingStore</a>
         <ul class="navigacijska-traka">
           <li><a href="Index.html">Home</a></li>
           <li><a href="GamingPC.html">Gaming PC</a></li>
