--- a/procesor.html
+++ b/procesor.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Procesori</title>
     <link rel="stylesheet" href="styles/style-menu.css">
     <link rel="stylesheet" href="styles/style-box.css">
     <link rel="stylesheet" href="styles/style-kontakt.css">
@@ -23,7 +23,7 @@
 
     <div class="menu_bar">
       <header>
-        <a href="Index.html" class="logo">Gaming store</a>
+        <a href="Index.html" class="logo">GamingStore</a>
         <ul class="navigacijska-traka">
           <li><a href="Index.html">Home</a></li>
           <li><a href="GamingPC.html">Gaming PC</a></li>
